--- a/PH2101/assignment02/main.tex
+++ b/PH2101/assignment02/main.tex
@@ -70,6 +70,23 @@ is attached to the bobs. Assuming small angle oscillations, \\ \\
 \begin{solution}
  
 \end{solution}
+(b) Find the normal modes and the normal frequencies
+\begin{solution}
+    
+\end{solution}
+(c) For $M_a=M_b=M$, does this reduce to the case considered in class?
+\begin{solution}
+    
+\end{solution}
+\question\textbf{Question 3}
+Consider the following string with the given configuration.\\
+(a)Find the Fourier series representation of the string. You should use the sine representation for the string and not the full representation.\\ 
+\begin{center}
+    \includegraphics[width = 5.0in]{q2.png}
+\end{center}
+\begin{solution}
+    
+\end{solution}
 (b) Show that normal modes having nodes at L/4 are absent.
 \begin{solution}
  
@@ -80,10 +97,13 @@ your codes.
  
 \end{solution}
 
-\question \textbf{ Question 3}
+\question \textbf{ Question 4}
 Consider the following pattern. Find the Fourier representation of this pattern. Use the
 complete representation (using sine and cosine). Also, check numerically that your solution
-matches with the given shape. You may submit your codes.
+matches with the given shape. You may submit your codes.\\
+\begin{center}
+    \includegraphics[width = 5.0in]{q4.png}
+\end{center}
 \begin{solution}
  
 \end{solution}
