--- a/PH2101/assignment03/main.tex
+++ b/PH2101/assignment03/main.tex
@@ -11,7 +11,7 @@
 
 \usepackage{amsmath,enumitem,wrapfig,amsfonts}
 \usepackage{physics}
-\usepackage{tikz}
+\usepackage{tikz,cancel}
 
 \newcommand{\StudentName}{Sabarno Saha - 22MS037}
 \newcommand{\AssignmentName}{Assignement 3}
@@ -50,17 +50,34 @@
 
 \question \textbf{ Question 1}\\
 Consider a dispersion relation $\omega = vk$, where the symbols have their usual meanings. We
-construct a wave packet by choosing sinusoids having a form $e^{i(kx-\omega t)}$ from $-k_0/4$
+construct a wave packet by choosing sinusoids having a form $Ae^{i(kx-\omega t)}$ from $-k_0/4$
 to $k_0/4$, with uniform amplitude for any k.\\
 (a) Calculate the shape for the wave packet.
 
 \begin{solution}\\
- 
+    The wave packet has a form $\psi(x,t)=e^{i(kx-\omega t)}$. So we intgrate from the possible wavenumbers.
+    \begin{align*}
+        \text{Wave form shape} =& \int \psi(x-vt) dk\\ 
+        =& A\int_{-\frac{k_0}{4}}^{\frac{k_0}{4}} e^{i(kx-\omega t)} dk \\ 
+        \tag{Using dispersion relation $\omega = vk$}
+        =& A\int_{-\frac{k_0}{4}}^{\frac{k_0}{4}} e^{ik(x-vt)}dk \\ 
+        =& A\cfrac{-ie^{ik(x-v t)}}{x-vt}\Bigg|_{-\frac{k_0}{4}}^{\frac{k_0}{4}}  dk \\ 
+        =& -iA\cfrac{e^{i\frac{k_0}{4}(x- vt)} - e^{-i\frac{k_0}{4}(x- vt)}}{x-vt}\\ 
+        =& A\cfrac{\sin\qty(\frac{k_0}{4}(x-vt))}{x-vt} \\ 
+        \Rightarrow\psi(x,t)=& A\cfrac{\sin\qty(\frac{k_0}{4}(x-vt))}{x-vt} \\ 
+    \end{align*}
+    Thus we have the wave packet of the form $\psi(x,t)= A\cfrac{\sin\qty(\frac{k_0}{4}(x-vt))}{x-vt}$, where
+    $A$ is an arbitrary constant which just scales the amplitude of the wave packet.
+
 \end{solution}
 
 (b) What is the group velocity of this packet?
 \begin{solution}\\
- 
+    We have defined Group velocity to be $v_g = \frac{d\omega}{dk}$ where $\omega$ is the angular frequency and $k$ is the angular wave number. We have from the dispersion relation
+    $\omega = vk$. Thus $\dv{\omega}{k} = v$ which is the group velocity of the wave packet.\\ 
+    \begin{center}
+        \fbox{$v_g = v$}
+    \end{center}
 \end{solution}
 
 (c)[Optional] If possible simulate(calculate and animate) and upload how the packet moves with 
@@ -78,14 +95,54 @@ where symbols carry their usual meanings.\\
 (a) Find the solution of the above equation, for given initial conditions $x(0) = x_0$ and 
 $\dot{x}(0) = v_0$.
 \begin{solution}\\
- 
+    We aim to solve this via the characteristic polynomial. Let us consider $x = e^{rt}$ to be a 
+    solution.
+    \begin{align*}
+        &\ddot{x}+\alpha\dot{x}+\omega_0^2x = 0 \\ 
+        \Rightarrow&r^2e^{rt} + \alpha re^{rt} + \omega_0^2e^{rt} = 0\\ 
+        \Rightarrow&e^{rt}\qty(r^2 + \alpha r+ \omega_0^2) = 0\\ 
+        \tag{Since $e^{rt} \ne 0 ~~\forall ~r\in \mathbb{R}$}
+        \Rightarrow& r^2 + \alpha r + \omega_0^2 = 0\\ 
+        \Rightarrow& r = \dfrac{-\alpha \pm \sqrt{\alpha^2 - 4\omega_0^2}}{2}
+    \end{align*}
+    Thus we put in the values of $r$ in the guessed value of $x$ to get the solution as
+    \begin{align*}
+        x(t) = e^{-\frac{\alpha}{2}t}\qty(Ae^{\cfrac{\sqrt{\alpha^2 - 4\omega_0^2}}{2}t} +Be^{-\cfrac{\sqrt{\alpha^2 - 4\omega_0^2}}{2}t})
+    \end{align*}
+    Now we come to the IVP,\\ 
+    \begin{align*}
+        \tag{we have $x(0) = x_0$}
+        x(0) &= A+B = x_0 \\ 
+        \tag{also we have $\dot{x}(0) = v_0$. Let $\cfrac{\sqrt{\alpha^2 - 4\omega_0^2}}{2} = \gamma$}
+        \dot{x}(0) &= \gamma A - \gamma B - \frac{\alpha}{2}(A+B) = v_0 \\
+    \end{align*}
+    Solving for A and B we have,
+    \begin{align*}
+        A + B =& x_0 \\ 
+        A - B =& \cfrac{v_0}{\gamma} + \frac{\alpha x_0}{2\gamma} \\ 
+        A =& \cfrac{x_0 + \cfrac{v_0}{\gamma}+ \cfrac{\alpha x_0}{2\gamma}}{2}\\ 
+    B =& \cfrac{x_0 - \cfrac{v_0}{\gamma} - \cfrac{\alpha x_0}{2\gamma}}{2}\\
+    \end{align*}
+    \begin{center}
+        \fbox{$ x(t) = e^{-\frac{\alpha}{2}t}\qty[\cfrac{x_0 + \cfrac{v_0}{\gamma}+\cfrac{\alpha x_0}{2\gamma}}{2}\qty(e^{\gamma t}) +\cfrac{x_0 - \cfrac{v_0}{\gamma}-\cfrac{\alpha x_0}{2\gamma}}{2}\qty(e^{-\gamma t})]$}
+    \end{center}
 \end{solution}
 
 
 (b) To find the solution for the critically damped case, check the solution at the limit of the 
 vanishing resonance frequency.
 \begin{solution}\\
- 
+    We have from previous question $ x(t) = e^{-\frac{\alpha}{2}t}\qty[\cfrac{x_0 + \cfrac{v_0}{\gamma}+\cfrac{\alpha x_0}{2\gamma}}{2}\qty(e^{\gamma t}) +\cfrac{x_0 - \cfrac{v_0}{\gamma}-\cfrac{\alpha x_0}{2\gamma}}{2}\qty(e^{-\gamma t})]$
+        \begin{align*}
+            x(t) &= e^{-\frac{\alpha}{2}t}\qty[x_0 \cosh(\gamma t) + \frac{2v_0 + \alpha x_0}{2\gamma}\sinh(\gamma t)]\\ 
+            \tag{Taking limit $\gamma \rightarrow0$}
+                 &= e^{-\frac{\alpha}{2}t}\qty[x_0 + \frac{2v_0+\alpha x_0}{2\cancel{\gamma}}(\cancel{\gamma} t)]\\ 
+                 &= e^{-\frac{\alpha}{2}t}\qty[x_0 +\qty( \cfrac{\alpha x_0}{2}+ v_0) t)]\\ 
+        \end{align*}
+        Thus we have the solution for the critically damped case.
+        \\ 
+        \textbf{Note:} \\ 
+        The limit is : \begin{align*}\lim_{x\to 0} \frac{\sinh x}{x} &= \lim_{u\to 0} \frac{\sinh (iu)}{iu}\tag{Let $x=iu$} \\ &= \lim_{u\to 0} \frac{i\sin (u)}{iu} \\ &= \lim_{u\to 0} \frac{\sin (u)}{u} \\ &=1\end{align*}
 \end{solution}
 
 \question \textbf{ Question 3}\\
@@ -96,7 +153,56 @@ Consider the following Wave equation:
 where, $v$ is a constant speed. Check whether this equation is Lorentz invariant. What if
 $v=c$, where c is the speed of light in vacuum.
 \begin{solution}\\
- 
+    Let us have two inertial frames S and S'. S' has a velocity $V$ wrt S along the $x$ axis,
+    where the origins of the frames coincide at $t=0$. The equation of lorentz trnasforms are,
+    \begin{align*}
+        \tag{$\gamma =\sqrt{1-\frac{V^2}{c^2}} $}
+        x' &= \gamma(x-Vt) \\ 
+        t' &= \gamma(t - \frac{V}{c^2}x)\\ 
+        y'&=y
+    \end{align*}
+    Now we transform the wave equation by taking partial derivatives using $x'$ and $t'$.
+    \begin{align*}
+        \pdv{y}{t} &= \pdv{y}{x'}\pdv{x'}{t} + \pdv{y}{t'}\pdv{t'}{t} \\ 
+                   &= -\gamma V\pdv{y}{x'} + \gamma \pdv{y}{t'} \\ 
+        \tag{Let $\pdv{y}{t} = \Omega $}
+        \pdv[2]{y}{t} &= \pdv{\Omega}{x'}\pdv{x'}{t} + \pdv{\Omega}{t'}\pdv{t'}{t}\\ 
+                      &= -\gamma V\pdv{\Omega}{x'} + \gamma \pdv{\Omega}{t'}\\ 
+                      \tag{Substituting $y=y'$ and $\Omega$}
+                      &=\gamma^2\qty(V^2\frac{\partial^2 y'}{\partial x'^2}+\frac{\partial^2 y'}{\partial t'^2}-2V\pdv[2]{y'}{x'}{t'})
+    \end{align*}
+    Similarly,
+    \begin{align*}
+        \pdv{y}{x} &= \pdv{y}{x'}\pdv{x'}{x} + \pdv{y}{t'}\pdv{t'}{x} \\ 
+                   &= \gamma \pdv{y}{x'} - \gamma \frac{V^2}{c}\pdv{y}{t'} \\ 
+        \tag{Let $\pdv{y}{x} = \Omega $}
+        \pdv[2]{y}{x} &= \pdv{\Omega}{x'}\pdv{x'}{x} + \pdv{\Omega}{t'}\pdv{t'}{x} \\
+                      &= -\gamma \frac{V^2}{c}\pdv{\Omega}{x'} + \gamma \pdv{\Omega}{t'} \\ 
+                      \tag{Substituting $y=y'$ and $\Omega$}
+                      &=\gamma^2\qty(\frac{\partial^2 y'}{\partial x'^2}+\frac{V^2}{c^4}\frac{\partial^2 y'}{\partial t'^2}-2\frac{V}{c^2}\pdv[2]{y'}{x'}{t'})
+    \end{align*}
+    In the S frame we have the equation $v^2\pdv[2]{y}{x} = \pdv[2]{y}{t}$. Equating in S' frame
+    we get,
+    \begin{align*}
+        &\gamma^2\qty(V^2\frac{\partial^2 y'}{\partial x'^2}+\frac{\partial^2 y'}{\partial t'^2}-2V\pdv[2]{y'}{x'}{t'})=v^2\gamma^2\qty(\frac{\partial^2 y'}{\partial x'^2}+\frac{V^2}{c^4}\frac{\partial^2 y'}{\partial t'^2}-2\frac{V}{c^2}\pdv[2]{y'}{x'}{t'})\\
+    \Rightarrow& \frac{\partial^2 y'}{\partial t'^2}\qty(1-\frac{v^2V^2}{c^4}) =v^2\frac{\partial^2 y'}{\partial x'^2}\qty(1-\frac{V^2}{v^2})+2V\pdv[2]{y'}{x'}{t'}\qty(1-\frac{v^2}{c^2})
+    \end{align*}
+    We can see that the equations are not invariant under Lorentz transformations. Now we check if 
+    equations are galilean invariant. We can check this just by taking the galilean limit $\frac{V}{c}\rightarrow0$
+    We get,
+    \begin{align*}
+        \frac{\partial^2 y'}{\partial t'^2}=v^2\frac{\partial^2 y'}{\partial x'^2}\qty(1-\frac{V^2}{v^2})+2V\pdv[2]{y'}{x'}{t'}\qty(1-\frac{v^2}{c^2})
+    \end{align*}
+    We now check if the equation is Lorentz invariant. In fact this equation is one of the reasons that 
+    led to the development of the special theory of relativity. Putting $v=c$, we obtain the 
+    equation followed by light.
+    \begin{align*}
+        &\frac{\partial^2 y'}{\partial t'^2}\qty(1-\frac{c^2V^2}{c^4}) =c^2\frac{\partial^2 y'}{\partial x'^2}\qty(1-\frac{V^2}{c^2})+\cancel{2V\pdv[2]{y'}{x'}{t'}\qty(1-\frac{c^2}{c^2})}\\
+        \Rightarrow&\frac{\partial^2 y'}{\partial t'^2}\cancel{\qty(1-\frac{V^2}{c^2})} =c^2\frac{\partial^2 y'}{\partial x'^2}\cancel{\qty(1-\frac{V^2}{c^2})}\\
+        \Rightarrow&\frac{\partial^2 y'}{\partial t'^2} =c^2\frac{\partial^2 y'}{\partial x'^2}
+    \end{align*}
+    We thus see that the wave equation is Lorentz Invariant when the wave travels with velocity 
+    equal to the speed of light.
 \end{solution}
 
 \question \textbf{ Question 4}\\
@@ -105,11 +211,46 @@ move (it slide on frictionless rods that pass through massless rings at the end 
 (a)Construct the equation of motion (you start with a beaded string and take the continuum
 limit)
 \begin{solution}\\
- 
+   Using the notion used in class we take the transverse displacements of the beads to be $y_k$
+   where k represents the $k^{th}$ bead.
+   \begin{align*}
+       &m\ddot{y_n} = -k(y_{n+1}-y_n)-k(y_n-y_{n-1})\\ 
+       \Rightarrow&\ddot{y_n} = -\frac{k}{m}(2y_n-y_{n+1}-y_{n-1})\\  
+       \tag{Let be $y_n$ be $y(x)$}
+       \Rightarrow&\ddot{y} = \frac{k}{m}(y(x+L)-y(x) - y(x) + y(x-L))\\ 
+       \tag{dividing and multiplying by $L^2$ on RHS }\\ 
+       \Rightarrow&\ddot{y} = \frac{kL^2}{m} \cfrac{\cfrac{y(x+L)-y(x)}{L}-\cfrac{y(x)-y(x-L)}{L}}{L}
+        \tag{taking limit $L\rightarrow0$ and let $\frac{kL^2}{m}= v^2$ for some v}\\ 
+       \Rightarrow&\pdv[2]{y}{t} = v^2 \pdv[2]{y}{x}
+   \end{align*}
 \end{solution}
 
 (b)Given that the free end is always at the antinode position, find the possible wavelengths.
 \begin{solution}\\
+    We solve this by Variable seperation 
+    \begin{align*}
+        &y(x,t) = y_x(x)y_t(t) \\ 
+        \tag{Using the wave equation we get and since it holds for all $x,t$}\\ 
+        \tag{where $\omega^2$ is an arbitrary const}
+    \Rightarrow& \frac{1}{y_t}\pdv[2]{y_t}{t} = \frac{v^2}{y_x} = -\omega^2
+    \end{align*}
+    Thus we have a solution of $y(x,t)=y_x(x)y_t(t)$
+    \begin{align*}
+        y_x(x) &= A\sin\qty(\frac{\omega}{v}x+\phi_x)\\ 
+        y_t(t) &=B \sin\qty(\omega t+\phi_t)
+    \end{align*}
+    Now applying boundary conditions we will get the possible wavelengths. $y_x(0)=0$. Thus 
+    $\sin(\phi_x) = 0 $. Thus $\phi_x = n\pi$. Let us choose $\phi_x = 0$. Then 
+    $y_x(x) = A\sin\qty(\frac{\omega}{v}x)$. The second boundary condition tell us that there is 
+    an antinode at $x=L$, which says that $y_x$ will take maximum value there.
+    \begin{align*}
+        &\sin\qty(\frac{\omega}{v}L) = 1 \\ 
+        \tag{where $k~~ \in ~~\mathbb{N} $}
+        \Rightarrow& \frac{\omega}{v}L = (2k-1)\frac{\pi}{2} \\ 
+        \tag{we know $\frac{\omega}{v} = \frac{2\pi}{\lambda}$}
+        \Rightarrow& \lambda = \frac{4L}{2k-1}
+    \end{align*}
+    Which are the possible values of $\lambda$.
  
 \end{solution}
 
