--- a/template.tex
+++ b/template.tex
@@ -1,15 +1,6 @@
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%
-% Welcome to Overleaf --- just edit your LaTeX on the left,
-% and we'll compile it for you on the right. If you give
-% someone the link to this page, they can edit at the same
-% time. See the help menu above for more info. Enjoy!
-%
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%\title{Math 453 HW 1}
-\documentclass[addpoints]{exam}
-
-\usepackage{amsmath,enumitem,wrapfig}
+\usepackage{amsmath,amsthm,amsfonts,enumitem,wrapfig}
+\usepackage{physics}
+\usepackage{mlmodern}
 \usepackage{tikz}
 
 \newcommand{\StudentName}{Sabarno Saha - 22MS037}
@@ -51,71 +42,6 @@
 \begin{solution}\\
  
 \end{solution}
-
-\question \textbf{ Question 2}
-
-\begin{solution}\\
- 
-\end{solution}
-
-\question \textbf{ Question 3}
-
-\begin{solution}\\
- 
-\end{solution}
-
-\question \textbf{ Question 4}
-
-\begin{solution}\\
- 
-\end{solution}
-
-
-\question \textbf{ Question 5}
-
-\begin{solution}\\
- 
-\end{solution}
-
-\question \textbf{ Question 6}
-
-\begin{solution}\\
- 
-\end{solution}
-
-\question \textbf{ Question 6}
-
-\begin{solution}\\
- 
-\end{solution}
-
-\question \textbf{ Question 6}
-
-\begin{solution}\\
- 
-\end{solution}
-
-\question \textbf{ Question 6}
-
-\begin{solution}\\
- 
-\end{solution}
-
-\question \textbf{ Question 6}
-
-\begin{solution}\\
- 
-\end{solution}
-
-\question \textbf{ Question 6}
-
-\begin{solution}\\
- 
-\end{solution}
-
-
-
-
 
 
 \end{questions}
