--- a/template.tex
+++ b/template.tex
@@ -1,4 +1,8 @@
+\documentclass[addpoints]{exam}
 \usepackage{amsmath,amsthm,amsfonts,enumitem,wrapfig}
+
+
+
 \usepackage{physics}
 \usepackage{mlmodern}
 \usepackage{tikz}
