added latest lab report

--- a/Lab Reports/arnabgupta/main.tex
+++ b/Lab Reports/arnabgupta/main.tex
@@ -37,6 +37,14 @@ are given below:
             \item  EDTA : Acts as a chelating agent to chelate $Mg^{2+}$ ions to keep DNAse from damaging 
                 plasmid DNA
          \end{itemize}
+    \item \textbf{Solution 2: }\\ 
+        0.2 NaOH( freshly diluted from 10N stock) and 1\% SDS(sodium deodecylsulphate).
+         \begin{itemize}
+           \item NaOH: denatures the DNA.
+            \item Tris HCl: functions as a chemical to keep a stabel pH.
+            \item  EDTA : Acts as a chelating agent to chelate $Mg^{2+}$ ions to keep DNAse from damaging 
+                plasmid DNA
+         \end{itemize}
 \end{itemize}
 
 
