added Identity presentation

--- a/IdentPres/slides/main.tex
+++ b/IdentPres/slides/main.tex
@@ -353,9 +353,9 @@ with non-interacting components, which can be studied independently reducing to 
   \underline{\textbf{Proof: }} \\ 
   All stochastic matrices $\PP$ have a spectral radius $\rho(\PP) =1$. All column sums equal to 
   1. Thus, $e$ is an eigenvector of $\PP^T$ with eigenvalue $1$, where $e$ is the column vector with 
-  all ones in its entries. We also have $\norm{P}_{\infty} = 1$. Using the fact that $\rho(\star) \leq \norm{\star}$ for every matrix norm(See \cite{Meyer2000}),
+  all ones in its entries. We also have $\norm{\PP}_{1} = 1$. Using the fact that $\rho(\star) \leq \norm{\star}$ for every matrix norm(See \cite{Meyer2000}),
   we get  that 
-  $$ 1 \leq \rho(\PP) \leq \norm{\PP}_{\infty} = 1 ~~~ \Rightarrow \rho (\PP) =1$$
+  $$ 1 \leq \rho(\PP) \leq \norm{\PP}_{1} = 1 ~~~ \Rightarrow \rho (\PP) =1$$
 
   We know that $\PP$ is primitive with $\rho(\PP) = 1$, we know that 
   $$ \lim_{k \to \infty} \PP^k = \frac{p q^T}{q^T p}  $$
