added lec02 and lec03 for ph4202

--- a/PH4202/note/refs.bib
+++ b/PH4202/note/refs.bib
@@ -1,4 +1,46 @@
-@book{Reif1965,
+@article{Zia2008,
+  doi = {10.48550/ARXIV.0806.1147},
+  url = {https://arxiv.org/abs/0806.1147},
+  author = {Zia,  R. K. P. and Redish,  Edward F. and McKay,  Susan R.},
+  keywords = {Physics Education (physics.ed-ph),  General Physics (physics.gen-ph),  FOS: Physical sciences,  FOS: Physical sciences},
+  title = {Making Sense of the Legendre Transform},
+  publisher = {arXiv},
+  year = {2008},
+  copyright = {arXiv.org perpetual,  non-exclusive license}
+}@misc{Deserno, title={Legendre transforms - andrew.cmu.ed}, url={https://www.andrew.cmu.edu/course/33-765/pdf/Legendre.pdf}, journal={Carnegie Mellon University}, author={Deserno, Markus}}
+@misc{ETH, url={https://ethz.ch/content/dam/ethz/special-interest/chab/icb/shih-lab-dam/documents/IEM-lecture/Lecture_2024/Notes_2024/Lecture_5_2024.pdf}, journal={ETH Zurich}}
+@article{Mer1952,
+  title = {Nucleation in Phase Transitions.},
+  volume = {44},
+  ISSN = {1541-5724},
+  url = {http://dx.doi.org/10.1021/ie50510a027},
+  DOI = {10.1021/ie50510a027},
+  number = {6},
+  journal = {Industrial &amp; Engineering Chemistry},
+  publisher = {American Chemical Society (ACS)},
+  author = {Mer,  Victor K. La},
+  year = {1952},
+  month = jun,
+  pages = {1270–1277}
+}@misc{Seth,
+title={Advanced Statistical Physics Lecture Notes},
+url={https://lonewolf1304.github.io},
+author={Seth, Sagnik},
+note = {These are a set of lecture notes taken by a friend of mine. I have borrowed the figures from that, since he is very good at those.}
+}
+@article{Prodanov2022,
+  title = {Mathematical analysis of the van der Waals equation},
+  volume = {640},
+  ISSN = {0921-4526},
+  url = {http://dx.doi.org/10.1016/j.physb.2022.414077},
+  DOI = {10.1016/j.physb.2022.414077},
+  journal = {Physica B: Condensed Matter},
+  publisher = {Elsevier BV},
+  author = {Prodanov,  Emil M.},
+  year = {2022},
+  month = sep,
+  pages = {414077}
+}@book{Reif1965,
   author    = {Reif, Frederick},
   title     = {Fundamentals of Statistical and Thermal Physics},
   publisher = {McGraw-Hill},
@@ -13,4 +55,105 @@
   year      = {2007},
   address   = {Cambridge},
   isbn      = {978-0521873420}
+}
+@misc{Arovas2025,
+  author       = {Arovas, Daniel},
+  title        = {Lecture Notes on Thermodynamics and Statistical Mechanics},
+  note         = {Work in progress, Feb. 2025 update},
+  year         = {2025},
+  howpublished = {Lecture notes}
+}
+
+@book{Callen1985,
+  author    = {Callen, Herbert B.},
+  title     = {Thermodynamics and an Introduction to Thermostatistics},
+  edition   = {2},
+  publisher = {John Wiley \& Sons},
+  year      = {1985}
+}
+
+@book{Goldenfeld1992,
+  author    = {Goldenfeld, Nigel},
+  title     = {Lectures on Phase Transitions and the Renormalization Group},
+  publisher = {Addison-Wesley},
+  year      = {1992}
+}
+
+@book{Kardar2007Particles,
+  author    = {Kardar, Mehran},
+  title     = {Statistical Physics of Particles},
+  publisher = {Cambridge University Press},
+  year      = {2007}
+}
+
+@book{Kardar2007Fields,
+  author    = {Kardar, Mehran},
+  title     = {Statistical Physics of Fields},
+  publisher = {Cambridge University Press},
+  year      = {2007}
+}
+
+@book{Pathria2011,
+  author    = {Pathria, R. K. and Beale, Paul D.},
+  title     = {Statistical Mechanics},
+  edition   = {3},
+  publisher = {Elsevier},
+  year      = {2011}
+}
+
+@book{Stanley1971,
+  author    = {Stanley, H. Eugene},
+  title     = {Introduction to Phase Transitions and Critical Phenomena},
+  publisher = {Oxford University Press},
+  year      = {1971}
+}
+
+@book{Schroeder2000,
+  author    = {Schroeder, Daniel V.},
+  title     = {An Introduction to Thermal Physics},
+  publisher = {Addison-Wesley},
+  year      = {2000}
+}
+
+@book{Schwabl2002,
+  author    = {Schwabl, Franz},
+  title     = {Statistical Mechanics},
+  publisher = {Springer},
+  year      = {2002}
+}
+
+@book{PlischkeBergersen2006,
+  author    = {Plischke, Michael and Bergersen, Birger},
+  title     = {Equilibrium Statistical Mechanics},
+  edition   = {3},
+  publisher = {World Scientific},
+  year      = {2006}
+}
+
+@book{StaufferChowdhury2000,
+  author    = {Stauffer, Dietrich and Chowdhury, Debashish},
+  title     = {Principles of Equilibrium Statistical Mechanics},
+  publisher = {Wiley-VCH},
+  year      = {2000}
+}
+
+@misc{TongStatPhys,
+  author       = {Tong, David},
+  title        = {Lecture Notes on Statistical Physics},
+  howpublished = {Lecture notes, University of Cambridge}
+}
+
+@misc{TongStatFieldTheory,
+  author       = {Tong, David},
+  title        = {Lecture Notes on Statistical Field Theory},
+  howpublished = {Lecture notes, University of Cambridge}
+}
+
+@incollection{Fisher1983,
+  author    = {Fisher, Michael E.},
+  title     = {Scaling, Universality and Renormalization Group Theory in Critical Phenomena},
+  booktitle = {Critical Phenomena},
+  editor    = {Hahne, F. J. W.},
+  publisher = {Springer},
+  year      = {1983}
 }
