--- a/PH4202/note/refs.bib
+++ b/PH4202/note/refs.bib
@@ -1,3 +1,30 @@
+@ARTICLE{Yang1952,
+  title     = "Statistical theory of equations of state and phase transitions.
+               I. theory of condensation",
+  author    = "Yang, C N and Lee, T D",
+  journal   = "Phys. Rev.",
+  publisher = "American Physical Society (APS)",
+  volume    =  87,
+  number    =  3,
+  pages     = "404--409",
+  month     =  aug,
+  year      =  1952,
+  copyright = "http://link.aps.org/licenses/aps-default-license"
+}
+
+@ARTICLE{Lee1952,
+  title     = "Statistical theory of equations of state and phase transitions.
+               {II}. Lattice gas and Ising model",
+  author    = "Lee, T D and Yang, C N",
+  journal   = "Phys. Rev.",
+  publisher = "American Physical Society (APS)",
+  volume    =  87,
+  number    =  3,
+  pages     = "410--419",
+  month     =  aug,
+  year      =  1952,
+  copyright = "http://link.aps.org/licenses/aps-default-license"
+}
 @article{Zia2008,
   doi = {10.48550/ARXIV.0806.1147},
   url = {https://arxiv.org/abs/0806.1147},
@@ -8,7 +35,7 @@
   year = {2008},
   copyright = {arXiv.org perpetual,  non-exclusive license}
 }@misc{Deserno, title={Legendre transforms - andrew.cmu.ed}, url={https://www.andrew.cmu.edu/course/33-765/pdf/Legendre.pdf}, journal={Carnegie Mellon University}, author={Deserno, Markus}}
-@misc{ETH, url={https://ethz.ch/content/dam/ethz/special-interest/chab/icb/shih-lab-dam/documents/IEM-lecture/Lecture_2024/Notes_2024/Lecture_5_2024.pdf}, journal={ETH Zurich}}
+@misc{ETH,title="Lecture: Supercooling and Nucleation.", url={https://ethz.ch/content/dam/ethz/special-interest/chab/icb/shih-lab-dam/documents/IEM-lecture/Lecture_2024/Notes_2024/Lecture_5_2024.pdf}, journal={ETH Zurich}}
 @article{Mer1952,
   title = {Nucleation in Phase Transitions.},
   volume = {44},
@@ -22,7 +49,8 @@
   year = {1952},
   month = jun,
   pages = {1270–1277}
-}@misc{Seth,
+}
+@misc{Seth,
 title={Advanced Statistical Physics Lecture Notes},
 url={https://lonewolf1304.github.io},
 author={Seth, Sagnik},
